--- a/pages/asteroid-belt.html
+++ b/pages/asteroid-belt.html
@@ -1,94 +1,10 @@
-<!DOCTYPE html>
-<html lang="en-US">
-    <head>
-        <link rel="stylesheet" href="../assets/style.css">
-        <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
-        <title>Asteroid belt - Gabrova</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <meta name="description" content="Geography of the planets">
-        <meta name="keywords" content="gabrova, asteroid, space, solar system, planet, exoplanet, moon, dwarf planet, geography">
-    </head>
-    <body>
+---
+layout: default
+title: Asteroid belt - Gabrova
+articlename: Asteroid belt
+link: asteroid-belt
+---
 
-        <!--The navigation menu-->
-
-        <nav>
-            <ul class="navigationmenu">
-                <li class=navlogo>
-                    <img src="../assets/logo.png" alt="LOGO">
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../index.html">Home</a>
-                </li>
-                <li class="navbutton">
-                    <p class="navlink">Articles</p>
-                    <div class="dropdown">
-                        <ul>
-                            <li class="dropbutton">
-                                <a class="navlink" href="planet.html">Planets</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="natural-satellite.html">Moons</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="asteroid-belt.html">Asteroid Belt</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="tno.html">TNOs</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="exoplanet.html">Exoplanets</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="star.html">Stars</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../about.html">About</a>
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../news.html">News</a>
-                </li>
-            </ul>
-        </nav>
-
-        <!--The side panels-->
-
-        <aside class="asideleft">
-            <h2 class="asidetitle">Asteroid belt</h2>
-            <ul class="toc">
-                <li>
-                    <a href="#DiscoveryOfTheAsteroidBelt">Discovery of the asteroid belt</a>
-                </li>
-                <li>
-                    <a href="#AsteroidsOfTheAsteroidBelt">Asteroids of the asteroid belt</a>
-                    <ul class="subtoc">
-                        <li>
-                            <a href="#Ceres">Ceres</a>
-                        </li>
-                        <li>
-                            <a href="#Vesta">Vesta</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#ExternalLinks">External links</a>
-                </li>
-            </ul>
-        </aside>
-
-        <!--Title on the main page-->
-
-        <div class="maincolumn">
-            <h1 class="bigpageheader">Asteroid belt</h1>
-            <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
-         
-            <!--The main page article-->
-         
-            <section class="maincontent">
                 <p class="paragraph">
                     The asteroid belt is a region in the Solar System, located roughly between the orbits of the <a href="planet.html">planets</a> <a href="jupiter.html">Jupiter</a> and <a href="mars.html">Mars</a>. 
                     It contains many irregularly shaped bodies called asteroids or minor planets. 
@@ -181,13 +97,3 @@
                         <a href="https://en.wikipedia.org/wiki/List_of_exceptional_asteroids">https://en.wikipedia.org/wiki/List_of_exceptional_asteroids</a>
                     </li>
                 </ul>
-            </section>
-        </div>
-
-        <!--A footer-->
-
-        <footer>
-            <p>Gabrova</p>
-        </footer>
-    </body>
-</html>
