--- a/pages/dwarf-planet.html
+++ b/pages/dwarf-planet.html
@@ -1,126 +1,10 @@
-<!DOCTYPE html>
-<html lang="en-US">
-    <head>
-        <link rel="stylesheet" href="../assets/style.css">
-        <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
-        <title>Dwarf planet - Gabrova</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <meta name="description" content="Geography of the planets">
-        <meta name="keywords" content="gabrova, asteroid, space, solar system, planet, exoplanet, moon, dwarf planet, geography">
-    </head>
-    <body>
+---
+layout: default
+title: Dwarf planet - Gabrova
+articlename: Dwarf planet
+link: dwarf-planet
+---
 
-        <!--The navigation menu-->
-
-        <nav>
-            <ul class="navigationmenu">
-                <li class=navlogo>
-                    <img src="../assets/logo.png" alt="LOGO">
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../index.html">Home</a>
-                </li>
-                <li class="navbutton">
-                    <p class="navlink">Articles</p>
-                    <div class="dropdown">
-                        <ul>
-                            <li class="dropbutton">
-                                <a class="navlink" href="planet.html">Planets</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="natural-satellite.html">Moons</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="asteroid-belt.html">Asteroid Belt</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="tno.html">TNOs</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="exoplanet.html">Exoplanets</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="star.html">Stars</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../about.html">About</a>
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../news.html">News</a>
-                </li>
-            </ul>
-        </nav>
-
-        <!--The side panels-->
-
-        <aside class="asideleft">
-            <h2 class="asidetitle">Dwarf planet</h2>
-            <ul class="toc">
-                <li>
-                    <a href="#Discovery">Discovery</a>
-                </li>
-                <li>
-                    <a href="#Criteria">Criteria</a>
-                </li>
-                <li>
-                    <a href="#OfficiallyRecognisedDwarfPlanets">Officially recognised dwarf planets</a>
-                    <ul class="subtoc">
-                        <li>
-                            <a href="#Pluto">Pluto</a>
-                        </li>
-                        <li>
-                            <a href="#Eris">Eris</a>
-                        </li>
-                        <li>
-                            <a href="#Haumea">Haumea</a>
-                        </li>
-                        <li>
-                            <a href="#Makemake">Makemake</a>
-                        </li>
-                        <li>
-                            <a href="#Ceres">Ceres</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#PotentialDwarfPlanets">Potential dwarf planets</a>
-                    <ul class="subtoc">
-                        <li>
-                            <a href="#Gonggong">Gonggong</a>
-                        </li>
-                        <li>
-                            <a href="#Quaoar">Quaoar</a>
-                        </li>
-                        <li>
-                            <a href="#Sedna">Sedna</a>
-                        </li>
-                        <li>
-                            <a href="#Orcus">Orcus</a>
-                        </li>
-                        <li>
-                            <a href="#Salacia">Salacia</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#ExternalLinks">External links</a>
-                </li>
-            </ul>
-        </aside>
-
-        <!--Title on the main page-->
-
-        <div class="maincolumn">
-            <h1 class="bigpageheader">Dwarf planet</h1>
-            <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
-         
-            <!--The main page article-->
-         
-            <section class="maincontent">
                 <p class="paragraph">
                     A dwarf planet is a celestial body that orbits the Sun and is large enough to be round due to its own gravity, but has not cleared its orbit of other objects (cleared the neighborhood).
                     This means that dwarf planets share their orbits with other bodies of similar, or greater size.
@@ -412,13 +296,3 @@
                         <a href="https://johnstonsarchive.net/astro/tnoslist.html">https://johnstonsarchive.net/astro/tnoslist.html</a>
                     </li>
                 </ul>
-            </section>
-        </div>
-
-        <!--A footer-->
-
-        <footer>
-            <p>Gabrova</p>
-        </footer>
-    </body>
-</html>
