--- a/pages/exoplanet.html
+++ b/pages/exoplanet.html
@@ -1,115 +1,10 @@
-<!DOCTYPE html>
-<html lang="en-US">
-    <head>
-        <link rel="stylesheet" href="../assets/style.css">
-        <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
-        <title>Exoplanet - Gabrova</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <meta name="description" content="Geography of the planets">
-        <meta name="keywords" content="gabrova, asteroid, space, solar system, planet, exoplanet, moon, dwarf planet, geography">
-    </head>
-    <body>
+---
+layout: default
+title: Exoplanet - Gabrova
+articlename: Exoplanet
+link: exoplanet
+---
 
-        <!--The navigation menu-->
-
-        <nav>
-            <ul class="navigationmenu">
-                <li class=navlogo>
-                    <img src="../assets/logo.png" alt="LOGO">
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../index.html">Home</a>
-                </li>
-                <li class="navbutton">
-                    <p class="navlink">Articles</p>
-                    <div class="dropdown">
-                        <ul>
-                            <li class="dropbutton">
-                                <a class="navlink" href="planet.html">Planets</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="natural-satellite.html">Moons</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="asteroid-belt.html">Asteroid Belt</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="tno.html">TNOs</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="exoplanet.html">Exoplanets</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="star.html">Stars</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../about.html">About</a>
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../news.html">News</a>
-                </li>
-            </ul>
-        </nav>
-
-        <!--The side panels-->
-
-        <aside class="asideleft">
-            <h2 class="asidetitle">Exoplanet</h2>
-            <ul class="toc">
-                <li>
-                    <a href="#Naming">Naming</a>
-                </li>
-                <li>
-                    <a href="#DetectionMethods">Detection methods</a>
-                    <ul class="subtoc">
-                        <li>
-                            <a href="#DirectImaging">Direct imaging</a>
-                        </li>
-                        <li>
-                            <a href="#PulsarTiming">Pulsar timing</a>
-                        </li>
-                        <li>
-                            <a href="#Astrometry">Astrometry</a>
-                        </li>
-                        <li>
-                            <a href="#Microlensing">Microlensing</a>
-                        </li>
-                        <li>
-                            <a href="#TransitDurationVariation">Transit duration variation</a>
-                        </li>
-                        <li>
-                            <a href="#TransitTimingVariation">Transit timing variation</a>
-                        </li>
-                        <li>
-                            <a href="#RadialVelocity">Radial velocity</a>
-                        </li>
-                        <li>
-                            <a href="#Transit">Transit</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#Habitability">Habitability</a>
-                </li>
-                <li>
-                    <a href="#ExternalLinks">External links</a>
-                </li>
-            </ul>
-        </aside>
-
-        <!--Title on the main page-->
-
-        <div class="maincolumn">
-            <h1 class="bigpageheader">Exoplanet</h1>
-            <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
-         
-            <!--The main page article-->
-         
-            <section class="maincontent">
                 <p class="paragraph">
                     Extrasolar planets, or exoplanets, are <a href="planet.html">planets</a> orbiting <a href="star.html">stars</a> different from the Sun. 
                     The first exoplanet was confirmed to exist in 1992. 
@@ -206,13 +101,3 @@
                         <a href="https://en.wikipedia.org/wiki/Exoplanet">https://en.wikipedia.org/wiki/Exoplanet</a>
                     </li>
                 </ul>
-            </section>
-        </div>
-
-        <!--A footer-->
-
-        <footer>
-            <p>Gabrova</p>
-        </footer>
-    </body>
-</html>
