--- a/pages/tno.html
+++ b/pages/tno.html
@@ -1,108 +1,10 @@
-<!DOCTYPE html>
-<html lang="en-US">
-    <head>
-        <link rel="stylesheet" href="../assets/style.css">
-        <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
-        <title>Trans-Neptunian object - Gabrova</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <meta name="description" content="Geography of the planets">
-        <meta name="keywords" content="gabrova, asteroid, space, solar system, planet, exoplanet, moon, dwarf planet, geography">
-    </head>
-    <body>
+---
+layout: default
+title: Trans-Neptunian object - Gabrova
+articlename: Trans-Neptunian object
+link: tno
+---
 
-        <!--The navigation menu-->
-
-        <nav>
-            <ul class="navigationmenu">
-                <li class=navlogo>
-                    <img src="../assets/logo.png" alt="LOGO">
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../index.html">Home</a>
-                </li>
-                <li class="navbutton">
-                    <p class="navlink">Articles</p>
-                    <div class="dropdown">
-                        <ul>
-                            <li class="dropbutton">
-                                <a class="navlink" href="planet.html">Planets</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="natural-satellite.html">Moons</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="asteroid-belt.html">Asteroid Belt</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="tno.html">TNOs</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="exoplanet.html">Exoplanets</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="star.html">Stars</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../about.html">About</a>
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../news.html">News</a>
-                </li>
-            </ul>
-        </nav>
-
-        <!--The side panels-->
-
-        <aside class="asideleft">
-            <h2 class="asidetitle">Trans-Neptunian object</h2>
-            <ul class="toc">
-                <li>
-                    <a href="#Discovery">Discovery</a>
-                </li>
-                <li>
-                    <a href="#Classification">Classification</a>
-                    <ul class="subtoc">
-                        <li>
-                            <a href="#KuiperBeltObjects">Kuiper belt objects</a>
-                        </li>
-                        <li>
-                            <a href="#ScatteredDiscObjects">Scattered disc objects</a>
-                        </li>
-                        <li>
-                            <a href="#ExtremeTransNeptunianObjects">Extreme trans-Neptunian objects</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#VisitedTNOs">Visited TNOs</a>
-                    <ul class="subtoc">
-                        <li>
-                            <a href="#Pluto">Pluto</a>
-                        </li>
-                        <li>
-                            <a href="#Arrokoth">Arrokoth</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#ExternalLinks">External links</a>
-                </li>
-            </ul>
-        </aside>
-
-        <!--Title on the main page-->
-
-        <div class="maincolumn">
-            <h1 class="bigpageheader">Trans-Neptunian object</h1>
-            <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
-         
-            <!--The main page article-->
-         
-            <section class="maincontent">
                 <p class="paragraph">
                     A trans-Neptunian object (TNO) is a minor planet with an average distance from the Sun greater than that of <a href="neptune.html">Neptune</a>. 
                     Trans-Neptunian objests are further divided into Kuiper belt objects, scattered disc objects and extreme trans-Neptunian objects. 
@@ -187,13 +89,3 @@
                         <a href="https://en.wikipedia.org/wiki/Trans-Neptunian_object">https://en.wikipedia.org/wiki/Trans-Neptunian_object</a>
                     </li>
                 </ul>
-            </section>
-        </div>
-
-        <!--A footer-->
-
-        <footer>
-            <p>Gabrova</p>
-        </footer>
-    </body>
-</html>
