--- a/pages/moon.html
+++ b/pages/moon.html
@@ -1,117 +1,10 @@
-<!DOCTYPE html>
-<html lang="en-US">
-    <head>
-        <link rel="stylesheet" href="../assets/style.css">
-        <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
-        <title>Moon - Gabrova</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <meta name="description" content="Geography of the planets">
-        <meta name="keywords" content="gabrova, asteroid, space, solar system, planet, exoplanet, moon, dwarf planet, geography">
-    </head>
-    <body>
+---
+layout: default
+title: Moon- Gabrova
+articlename: Moon
+link: moon
+---
 
-        <!--The navigation menu-->
-
-        <nav>
-            <ul class="navigationmenu">
-                <li class=navlogo>
-                    <img src="../assets/logo.png" alt="LOGO">
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../index.html">Home</a>
-                </li>
-                <li class="navbutton">
-                    <p class="navlink">Articles</p>
-                    <div class="dropdown">
-                        <ul>
-                            <li class="dropbutton">
-                                <a class="navlink" href="planet.html">Planets</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="natural-satellite.html">Moons</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="asteroid-belt.html">Asteroid Belt</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="tno.html">TNOs</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="exoplanet.html">Exoplanets</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="star.html">Stars</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../about.html">About</a>
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../news.html">News</a>
-                </li>
-            </ul>
-        </nav>
-
-        <!--The side panels-->
-
-        <aside class="asideleft">
-            <h2 class="asidetitle">Earth</h2>
-            <ul class="toc">
-                <li>
-                    <a href="#Formation">Formation</a>
-                </li>
-                <li>
-                    <a href="#Orbit">Orbit</a>
-                    <ul class="subtoc">
-                        <li>
-                            <a href="#Phases">Phases</a>
-                        </li>
-                        <li>
-                            <a href="#Eclipses">Eclipses</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#PhysicalCharacteristics">Physical characteristics</a>
-                </li>
-                <li>
-                    <a href="#EarlyObservations">Early observations</a>
-                </li>
-                <li>
-                    <a href="#Exploration">Exploration</a>
-                    <ul class="subtoc">
-                        <li>
-                            <a href="#LunaProgram">Luna program</a>
-                        </li>
-                        <li>
-                            <a href="#ApolloProgram">Apollo program</a>
-                        </li>
-                        <li>
-                            <a href="#LaterMissions">Later missions</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#CulturalSignificance">Cultural significance</a>
-                </li>
-                <li>
-                    <a href="#ExternalLinks">External links</a>
-                </li>
-            </ul>
-        </aside>
-
-        <!--Title on the main page-->
-
-        <div class="maincolumn">
-            <h1 class="bigpageheader">Moon</h1>
-            <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
-         
-            <!--The main page article-->
-         
-            <section class="maincontent">
                 <div class="articlediv">
                     <div class="captionbox right" style="width:255px;">
                         <img class="articleimage" src="../assets/images/natural-satellites/moon.jpg" alt="Moon" width="253" height="240">
@@ -359,13 +252,3 @@
                         <a href="https://en.wikipedia.org/wiki/Moon">https://en.wikipedia.org/wiki/Moon</a>
                     </li>
                 </ul>
-            </section>
-        </div>
-
-        <!--A footer-->
-
-        <footer>
-            <p>Gabrova</p>
-        </footer>
-    </body>
-</html>
