--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -1,115 +1,10 @@
-<!DOCTYPE html>
-<html lang="en-US">
-    <head>
-        <link rel="stylesheet" href="../assets/style.css">
-        <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
-        <title>Natural satellite - Gabrova</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <meta name="description" content="Geography of the planets">
-        <meta name="keywords" content="gabrova, asteroid, space, solar system, planet, exoplanet, moon, dwarf planet, geography">
-    </head>
-    <body>
+---
+layout: default
+title: Natural satellite - Gabrova
+articlename: Natural satellite
+link: natural-satellite
+---
 
-        <!--The navigation menu-->
-
-        <nav>
-            <ul class="navigationmenu">
-                <li class=navlogo>
-                    <img src="../assets/logo.png" alt="LOGO">
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../index.html">Home</a>
-                </li>
-                <li class="navbutton">
-                    <p class="navlink">Articles</p>
-                    <div class="dropdown">
-                        <ul>
-                            <li class="dropbutton">
-                                <a class="navlink" href="planet.html">Planets</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="natural-satellite.html">Moons</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="asteroid-belt.html">Asteroid Belt</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="tno.html">TNOs</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="exoplanet.html">Exoplanets</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="star.html">Stars</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../about.html">About</a>
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../news.html">News</a>
-                </li>
-            </ul>
-        </nav>
-
-        <!--The side panels-->
-
-        <aside class="asideleft">
-            <h2 class="asidetitle">Natural satellite</h2>
-            <ul class="toc">
-                <li>
-                    <a href="#HistoryAndDefiningSatellites">History and defining satellites</a>
-                </li>
-                <li>
-                    <a href="#SatellitesOfPlanets">Satellites of planets</a>
-                    <ul class="subtoc">
-                        <li>
-                            <a href="#TheMoon">The Moon</a>
-                        </li>
-                        <li>
-                            <a href="#SatellitesOfMars">Satellites of Mars</a>
-                        </li>
-                        <li>
-                            <a href="#GalileanSatellites">Galilean satellites</a>
-                        </li>
-                        <li>
-                            <a href="#OtherJovianSatellites">Other Jovian satellites</a>
-                        </li>
-                        <li>
-                            <a href="#SatellitesOfSaturn">Satellites of Saturn</a>
-                        </li>
-                        <li>
-                            <a href="#SatellitesOfUranus">Satellites of Uranus</a>
-                        </li>
-                        <li>
-                            <a href="#SatellitesOfNeptune">Satellites of Neptune</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#SatellitesOfDwarfPlanets">Satellites of dwarf planets</a>
-                </li>
-                <li>
-                    <a href="#SatellitesOfAsteroids">Satellites of asteroids</a>
-                </li>
-                <li>
-                    <a href="#ExternalLinks">External links</a>
-                </li>
-            </ul>
-        </aside>
-
-        <!--Title on the main page-->
-
-        <div class="maincolumn">
-            <h1 class="bigpageheader">Natural satellite</h1>
-            <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
-         
-            <!--The main page article-->
-         
-            <section class="maincontent">
                 <p class="paragraph">
                     A natural satellite is an astronomical body that orbits a <a href="planet.html">planet</a>, a minor planet, or another satellite. 
                     Natural satellites are also called moons.
@@ -319,13 +214,3 @@
                         <a href="https://en.wikipedia.org/wiki/Natural_satellite">https://en.wikipedia.org/wiki/Natural_satellite</a>
                     </li>
                 </ul>
-            </section>
-        </div>
-
-        <!--A footer-->
-
-        <footer>
-            <p>Gabrova</p>
-        </footer>
-    </body>
-</html>
