--- a/pages/planet.html
+++ b/pages/planet.html
@@ -1,118 +1,10 @@
-<!DOCTYPE html>
-<html lang="en-US">
-    <head>
-        <link rel="stylesheet" href="../assets/style.css">
-        <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
-        <title>Planet - Gabrova</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <meta name="description" content="Geography of the planets">
-        <meta name="keywords" content="gabrova, asteroid, space, solar system, planet, exoplanet, moon, dwarf planet, geography">
-    </head>
-    <body>
+---
+layout: default
+title: Planet - Gabrova
+articlename: Planet
+link: planet
+---
 
-        <!--The navigation menu-->
-
-        <nav>
-            <ul class="navigationmenu">
-                <li class=navlogo>
-                    <img src="../assets/logo.png" alt="LOGO">
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../index.html">Home</a>
-                </li>
-                <li class="navbutton">
-                    <p class="navlink">Articles</p>
-                    <div class="dropdown">
-                        <ul>
-                            <li class="dropbutton">
-                                <a class="navlink" href="planet.html">Planets</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="natural-satellite.html">Moons</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="asteroid-belt.html">Asteroid Belt</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="tno.html">TNOs</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="exoplanet.html">Exoplanets</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="star.html">Stars</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../about.html">About</a>
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../news.html">News</a>
-                </li>
-            </ul>
-        </nav>
-
-        <!--The side panels-->
-
-        <aside class="asideleft">
-            <h2 class="asidetitle">Planet</h2>
-            <ul class="toc">
-                <li>
-                    <a href="#DiscoveryOfThePlanets">Discovery of the planets</a>
-                </li>
-                <li>
-                    <a href="#PlanetsOfTheSolarSystem">Planets of the Solar System</a>
-                    <ul class="subtoc">
-                        <li>
-                            <a href="#Mercury">Mercury</a>
-                        </li>
-                        <li>
-                            <a href="#Venus">Venus</a>
-                        </li>
-                        <li>
-                            <a href="#Earth">Earth</a>
-                        </li>
-                        <li>
-                            <a href="#Mars">Mars</a>
-                        </li>
-                        <li>
-                            <a href="#Jupiter">Jupiter</a>
-                        </li>
-                        <li>
-                            <a href="#Saturn">Saturn</a>
-                        </li>
-                        <li>
-                            <a href="#Uranus">Uranus</a>
-                        </li>
-                        <li>
-                            <a href="#Neptune">Neptune</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#DwarfPlanets">Dwarf planets</a>
-                </li>
-                <li>
-                    <a href="#Exoplanets">Exoplanets</a>
-                </li>
-                <li>
-                    <a href="#ExternalLinks">External links</a>
-                </li>
-            </ul>
-        </aside>
-
-        <!--Title on the main page-->
-
-        <div class="maincolumn">
-            <h1 class="bigpageheader">Planet</h1>
-            <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
-         
-            <!--The main page article-->
-         
-            <section class="maincontent">
                 <p class="paragraph">
                     Planets are round astronomical bodies, smaller than <a href="star.html">stars</a>.
                    According to the IAU, a planet is a celestial body that:
@@ -322,13 +214,3 @@
                         <a href="https://en.wikipedia.org/wiki/Planet">https://en.wikipedia.org/wiki/Planet</a>
                     </li>
                 </ul>
-            </section>
-        </div>
-
-        <!--A footer-->
-
-        <footer>
-            <p>Gabrova</p>
-        </footer>
-    </body>
-</html>
