--- a/pages/saturn.html
+++ b/pages/saturn.html
@@ -1,135 +1,10 @@
-<!DOCTYPE html>
-<html lang="en-US">
-    <head>
-        <link rel="stylesheet" href="../assets/style.css">
-        <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
-        <title>Saturn - Gabrova</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <meta name="description" content="Geography of the planets">
-        <meta name="keywords" content="gabrova, asteroid, space, solar system, planet, exoplanet, moon, dwarf planet, geography">
-    </head>
-    <body>
+---
+layout: default
+title: Saturn - Gabrova
+articlename: Saturn
+link: saturn
+---
 
-        <!--The navigation menu-->
-
-        <nav>
-            <ul class="navigationmenu">
-                <li class=navlogo>
-                    <img src="../assets/logo.png" alt="LOGO">
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../index.html">Home</a>
-                </li>
-                <li class="navbutton">
-                    <p class="navlink">Articles</p>
-                    <div class="dropdown">
-                        <ul>
-                            <li class="dropbutton">
-                                <a class="navlink" href="planet.html">Planets</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="natural-satellite.html">Moons</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="asteroid-belt.html">Asteroid Belt</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="tno.html">TNOs</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="exoplanet.html">Exoplanets</a>
-                            </li>
-                            <li class="dropbutton">
-                                <a class="navlink" href="star.html">Stars</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../about.html">About</a>
-                </li>
-                <li class="navbutton">
-                    <a class="navlink" href="../news.html">News</a>
-                </li>
-            </ul>
-        </nav>
-
-        <!--The side panels-->
-
-        <aside class="asideleft">
-            <h2 class="asidetitle">Saturn</h2>
-            <ul class="toc">
-                <li>
-                    <a href="#Name">Name</a>
-                </li>
-                <li>
-                    <a href="#OrbitAndRotation">Orbit and rotation</a>
-                </li>
-                <li>
-                    <a href="#PhysicalCharacteristics">Physical characteristics</a>
-                    <ul class="subtoc">
-                        <li>
-                            <a href="#ShapeAndSize">Shape and size</a>
-                        </li>
-                        <li>
-                            <a href="#InternalStructure">Internal structure</a>
-                        </li>
-                        <li>
-                            <a href="#Atmosphere">Atmosphere</a>
-                        </li>
-                        <li>
-                            <a href="#RingSystem">Ring system</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#Moons">Moons</a>
-                    <ul class="subtoc">
-                        <li>
-                            <a href="#Titan">Titan</a>
-                        </li>
-                        <li>
-                            <a href="#Rhea">Rhea</a>
-                        </li>
-                        <li>
-                            <a href="#Iapetus">Iapetus</a>
-                        </li>
-                        <li>
-                            <a href="#Dione">Dione</a>
-                        </li>
-                        <li>
-                            <a href="#Tethys">Tethys</a>
-                        </li>
-                        <li>
-                            <a href="#Enceladus">Enceladus</a>
-                        </li>
-                        <li>
-                            <a href="#Mimas">Mimas</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#EarlyObservations">Early observations</a>
-                </li>
-                <li>
-                    <a href="#Exploration">Exploration</a>
-                </li>
-                <li>
-                    <a href="#ExternalLinks">External links</a>
-                </li>
-            </ul>
-        </aside>
-
-        <!--Title on the main page-->
-
-        <div class="maincolumn">
-            <h1 class="bigpageheader">Saturn</h1>
-            <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
-         
-            <!--The main page article-->
-         
-            <section class="maincontent">
                 <div class="articlediv">
                     <div class="captionbox right">
                         <img class="articleimage" src="../assets/images/planets/saturn.jpg" alt="Saturn" width="320" height="164">
@@ -372,13 +247,3 @@
                         <a href="https://en.wikipedia.org/wiki/Saturn">https://en.wikipedia.org/wiki/Saturn</a>
                     </li>
                 </ul>
-            </section>
-        </div>
-
-        <!--A footer-->
-
-        <footer>
-            <p>Gabrova</p>
-        </footer>
-    </body>
-</html>
