--- a/pages/venus.html
+++ b/pages/venus.html
@@ -19,7 +19,7 @@ link: venus
                     <p class="paragraph">
                         The atmosphere is composed almost entirely of carbon dioxide (96.5%), which heats the planet.
                         Because of this, the Venusian surface has a higher temperature than <a href="mercury.html">Mercury</a>, the closest planet to Sun. 
-                        Opaque clouds of sulfuric afid cover the planet.
+                        Opaque clouds of sulfuric acid cover the planet.
                     </p>
                     <p class="paragraph">
                         Venus is shaped by volcanism and craters.
