--- a/pages/dwarf-planet.html
+++ b/pages/dwarf-planet.html
@@ -6,7 +6,7 @@ link: dwarf-planet
 ---
 
                 <p class="paragraph">
-                    A dwarf planet is a celestial body that orbits the Sun and is large enough to be round due to its own gravity, but has not cleared its orbit of other objects (cleared the neighborhood).
+                    A dwarf planet is a celestial body that orbits the <a href="sun.html">Sun</a> and is large enough to be round due to its own gravity, but has not cleared its orbit of other objects (cleared the neighborhood).
                     This means that dwarf planets share their orbits with other bodies of similar, or greater size.
                 </p>
                 <p class="paragraph">
@@ -31,7 +31,7 @@ link: dwarf-planet
                     Ceres is the first dwarf planet ever discovered.
                     It was discovered in 1801 by the Italian astronomer Giuseppe Piazzi.
                     It was the first object to be discovered in a region between <a href="mars.html">Mars</a> and <a href="jupiter.html">Jupiter</a>, called the <a href="asteroid-belt.html">asteroid belt</a>.
-                    For a while it was considered a planet before many other asteroids were found orbiting the Sun.
+                    For a while it was considered a planet before many other asteroids were found orbiting the <a href="sun.html">Sun</a>.
                 </p>
                 <p class="paragraph">
                     Pluto was discovered in 1930 by Clyde Tombaugh.
