--- a/pages/earth.html
+++ b/pages/earth.html
@@ -12,7 +12,7 @@ link: earth
                     </div>
                     <p class="paragraph">
                         Earth is a <a href="planet.html">planet</a> in the Solar System.
-                        It is the third planet from the Sun and the biggest of the terrestrial planets.
+                        It is the third planet from the <a href="sun.html">Sun</a> and the biggest of the terrestrial planets.
                         It is the only place that is known to harbor life.
                         Earth has one natural satellite - <a href="moon.html">Moon</a>.
                     </p>
@@ -75,11 +75,11 @@ link: earth
                     </div>
                     <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
                     <p class="paragraph">
-                        The rotation period relative to the sun is 24 h (solar day), but relative to other <a href="star.html">stars </a>is 23 hours, 56 minutes and 4 seconds (stellar day).
+                        The rotation period relative to the <a href="sun.html">Sun</a> is 24 h (solar day), but relative to other <a href="star.html">stars </a>is 23 hours, 56 minutes and 4 seconds (stellar day).
                         It has been recorded that Earth's rotation is decelerating, although faster rotations were also reported.
                     </p>
                     <p class="paragraph">
-                        Earth is the third closest planet to the Sun at an average distance of 150 million km. 
+                        Earth is the third closest planet to the <a href="sun.html">Sun</a> at an average distance of 150 million km. 
                         This length is used as a basis for the Astronomical Unit, or AU.
                         Earth orbits around the Sun every 365.2564 solar days.
                     </p>
@@ -152,7 +152,7 @@ link: earth
                     <p class="paragraph">
                         The athmosphere of Earth is mostly made up of 78% nitrogen and 21% oxygen. 
                         The remaining 1% consisting of other gases like water vapors, argon, carbon dioxide, neon, helium, methane and krypton.
-                        Carbon dioxide and other greenhouse gases like methane capture part of the energy from the Sun and warm the Earth. 
+                        Carbon dioxide and other greenhouse gases like methane capture part of the energy from the <a href="sun.html">Sun</a> and warm the Earth. 
                         Those gases increase every year due to human activity, resulting in rising average temperatures.
                     </p>
                     <p class="paragraph">
