--- a/pages/exoplanet.html
+++ b/pages/exoplanet.html
@@ -6,7 +6,7 @@ link: exoplanet
 ---
 
                 <p class="paragraph">
-                    Extrasolar planets, or exoplanets, are <a href="planet.html">planets</a> orbiting <a href="star.html">stars</a> different from the Sun. 
+                    Extrasolar planets, or exoplanets, are <a href="planet.html">planets</a> orbiting <a href="star.html">stars</a> different from the <a href="sun.html">Sun</a>. 
                     The first exoplanet was confirmed to exist in 1992. 
                     There are more than 5,000 known exoplanets.
                 </p>
@@ -57,7 +57,7 @@ link: exoplanet
                 <p class="paragraph">
                     Gravitational fields of stars can magnify the light of distant background stars. 
                     Planets can cause anomalies in the detection of microlensing. 
-                    This method is most sensitive to planets around 1-10 AU away from Sun-like stars.
+                    This method is most sensitive to planets around 1-10 AU away from <a href="sun.html">Sun</a>-like stars.
                 </p>
                 <h3 class="paragraphsubheader" id="TransitDurationVariation">Transit duration variation</h3>
                 <p class="paragraph">
